Fixed OpenAPI generators and controllers methods
